# angor-competency

./: README.md  package-lock.json
AngorWeb/: package-lock.json  package.json
AngorWeb/public/: index.html
AngorWeb/src/: App.tsx  index.tsx  serviceWorker.ts  setupTests.ts
AngorWeb/src/components/: LiquidInterface.tsx
LiquidService/: AddressRequest.cs  LiquidService.csproj  Program.cs  TransactionRequest.cs
LiquidService/Controllers/: LiquidController.cs
LiquidService/Services/: LiquidService.cs
liquid-cli/: Cargo.toml
liquid-cli/src/: main.rs
